--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       securityJsCode: '8230a92c6ac8fe37c5baa33ee4bda415',
     }
   </script>
-  <script src="https://webapi.amap.com/maps?v=1.4.15&key=25e637a0837409eea0e77712608426b4&plugin=AMap.DistrictSearch">
+  <script src="https://webapi.amap.com/maps?v=1.4.15&key=25e637a0837409eea0e77712608426b4&plugin=AMap.DistrictSearch,AMap.MarkerClusterer,AMap.DistrictLayer,AMap.MarkerClusterer">
   </script>
   <script type="module" src="/src/main.ts"></script>
 </body>
